# sft.rs

./: .gitignore  Cargo.toml  fuzz.sh  oui  readme.md
src/: lib.rs
src/client/channel/: mod.rs
src/client/cli/: mod.rs
src/encryption/: mod.rs
src/protocol/: mod.rs
src/server/: mod.rs
src/server/paralelize/: mod.rs
uploads/: Cargo.toml
