[package]
name = "sft"
version = "0.1.0"
edition = "2024"

# déclaration des binaires
[[bin]]
name = "sft"
path = "src/bin/sft.rs"

[[bin]]
name = "sftd"
path = "src/bin/sftd.rs"


[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
x25519-dalek = {version = "2", features = ["getrandom"]}
indicatif = "0.17"
serde_json = "1"
ring = "0.17.14"
